--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - "6"
 before_script:
   - npm install hexo-cli -g
-  - cd cd themes/tranquilpeak
+  - cd themes/tranquilpeak
   - brow install
 script:
   - hexo g
