--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ before_script:
   - npm install hexo-cli -g
   - cd themes/tranquilpeak
   - yarn
-  - bower install
   - cd ../..
   -
 script:
@@ -14,7 +13,7 @@ script:
 deploy:
   provider: pages
   local_dir: public
-  repo: dolikey/gh-pages.github.io
+  repo: dolikey/gh-pages
   skip_cleanup: true
   github_token: $GIT
   on:
