--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ node_js:
   - "6"
 before_script:
   - npm install hexo-cli -g
+  - cd themes/tranquilpeak
+  - yarn
+  - cd ../..
   -
 script:
   - hexo g
