--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: 愿世界和平
-subtitle: 
+subtitle: test
 description: 这是一个测试的blog站点
 author: arone
 language: zh-cn
@@ -88,6 +88,3 @@ deploy:
   name: dolikey # git用户名
   email: dugw942@nenu.edu.cn # git帐号的邮箱
   extend_dirs:  # 排除的文件夹
-
-
-disqus_shortname: arone-me
