--- a/_config.yml
+++ b/_config.yml
@@ -71,8 +71,8 @@ pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
-plugins:
-  - hexo-algoliasearch
+# plugins:
+  # - hexo-algoliasearch
 
 algolia:
   appId: "AX6BXDJKLY"
