--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,10 @@
 language: node_js
+
 node_js:
   - "10"
 before_script:
   - npm install hexo-cli -g
-  # - cd themes/tranquilpeak
-  - npm install
-  # - bower install
-  # - cd ../..
-  -
+
 script:
   - hexo -v
   - hexo g
@@ -17,7 +14,7 @@ deploy:
   local_dir: public
   repo: dolikey/gh-pages
   skip_cleanup: true
-  github_token: $GIT
+  github_token: $GIT_TOKEN # Set in travis-ci.org dashboard
   on:
     branch: master
   target_branch: gh-pages
