--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ description: 记录生活，记录成长，前端猫一只。
 author: 叶子
 language: zh-Hans
 timezone:
+create_time: "08/31/2017 12:00:00"
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
@@ -124,6 +125,13 @@ feed:
   order_by: -date
   icon: icon.png
   autodiscovery: true
+
+
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
 
 ## Themes: https://hexo.io/themes/
 theme: next
