--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: node_js
 
 node_js:
   - "10"
+
+cache:
+    apt: true
+    directories:
+        - node_modules
+
 before_script:
   - npm install hexo-cli -g
 
