--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -129,15 +129,15 @@ scheme: Gemini
 # Value before `||` delimeter is the target permalink.
 # Value after `||` delimeter is the name of FontAwesome icon. If icon (with or without delimeter) is not specified, globe icon will be loaded.
 social:
-  GitHub: https://github.com/yourname || github
-  E-Mail: mailto:yourname@gmail.com || envelope
+  GitHub: https://github.com/dolikey || github
+  E-Mail: dugw942@gmail.com || envelope
   #Google: https://plus.google.com/yourname || google
   #Twitter: https://twitter.com/yourname || twitter
-  FB Page: https://www.facebook.com/yourname || facebook
+  FB Page: https://www.facebook.com/profile.php?id=100011354655955 || facebook
   #VK Group: https://vk.com/yourname || vk
   #StackOverflow: https://stackoverflow.com/yourname || stack-overflow
   #YouTube: https://youtube.com/yourname || youtube
-  Instagram: https://instagram.com/yourname || instagram
+  Instagram: https://www.instagram.com/zhushengdu/ || instagram
   #Skype: skype:yourname?call|chat || skype
 
 social_icons:
